--- a/notebooks/mislabels/Credit_With_Mislabels.ipynb
+++ b/notebooks/mislabels/Credit_With_Mislabels.ipynb
@@ -107,9 +107,9 @@
     "from virny.datasets.data_loaders import CreditDataset\n",
     "\n",
     "from source.error_injectors.mislabels_injector import MislabelsInjector\n",
-    "from source.user_interfaces.experiment_interface import run_exp_iteration\n",
     "from source.utils.custom_initializers import create_experiment_data_loader\n",
     "from source.preprocessing.basic_preprocessing import get_null_imputer_preprocessor\n",
+    "from source.user_interfaces.experiment_interface import run_exp_iteration_with_db_writer\n",
     "from configs.constants import NUM_METRICS_COMPUTATION_RUNS, EXPERIMENT_SEEDS"
    ]
   },
@@ -511,16 +511,16 @@
     }
    ],
    "source": [
-    "multiple_run_metrics_dct = run_exp_iteration(data_loader=exp_iter_data_loader,\n",
-    "                                             experiment_seed=experiment_seed,\n",
-    "                                             db_collection_name='mislabels_results',\n",
-    "                                             preprocessor=preprocessor,\n",
-    "                                             models_params_for_tuning=models_params_for_tuning,\n",
-    "                                             metrics_computation_config=metrics_computation_config,\n",
-    "                                             custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                                             with_tuning=True,\n",
-    "                                             save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                             tuned_params_df_path=None)"
+    "multiple_run_metrics_dct = run_exp_iteration_with_db_writer(data_loader=exp_iter_data_loader,\n",
+    "                                                            experiment_seed=experiment_seed,\n",
+    "                                                            db_collection_name='mislabels_results',\n",
+    "                                                            preprocessor=preprocessor,\n",
+    "                                                            models_params_for_tuning=models_params_for_tuning,\n",
+    "                                                            metrics_computation_config=metrics_computation_config,\n",
+    "                                                            custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                                            with_tuning=True,\n",
+    "                                                            save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                                            tuned_params_df_path=None)"
    ]
   },
   {
