--- a/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
+++ b/notebooks/preprocessing/Credit_With_Null_Imputers.ipynb
@@ -126,8 +126,8 @@
     "from virny.datasets.data_loaders import CreditDataset\n",
     "\n",
     "from configs.constants import NUM_METRICS_COMPUTATION_RUNS, EXPERIMENT_SEEDS, TEST_SET_FRACTION\n",
+    "from source.user_interfaces.experiment_interface import run_exp_iteration_with_db_writer\n",
     "from source.error_injectors.random_nulls_injector import RandomNullsInjector\n",
-    "from source.user_interfaces.experiment_interface import run_exp_iteration\n",
     "from source.utils.custom_initializers import create_experiment_data_loader\n",
     "from source.preprocessing.basic_preprocessing import get_null_imputer_preprocessor"
    ]
@@ -582,17 +582,17 @@
     }
    ],
    "source": [
-    "multiple_run_metrics_dct = run_exp_iteration(data_loader=exp_iter_data_loader,\n",
-    "                                             experiment_seed=experiment_seed,\n",
-    "                                             test_set_fraction=TEST_SET_FRACTION,\n",
-    "                                             db_writer_func=db_writer_func,\n",
-    "                                             preprocessor=preprocessor,\n",
-    "                                             models_params_for_tuning=models_params_for_tuning,\n",
-    "                                             metrics_computation_config=metrics_computation_config,\n",
-    "                                             custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                                             with_tuning=True,\n",
-    "                                             save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                             tuned_params_df_path=None)"
+    "multiple_run_metrics_dct = run_exp_iteration_with_db_writer(data_loader=exp_iter_data_loader,\n",
+    "                                                            experiment_seed=experiment_seed,\n",
+    "                                                            test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                                            db_writer_func=db_writer_func,\n",
+    "                                                            preprocessor=preprocessor,\n",
+    "                                                            models_params_for_tuning=models_params_for_tuning,\n",
+    "                                                            metrics_computation_config=metrics_computation_config,\n",
+    "                                                            custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                                            with_tuning=True,\n",
+    "                                                            save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                                            tuned_params_df_path=None)"
    ]
   },
   {
