Save current verions of error injectors

--- a/notebooks/models_stress_testing/Folktables_GA_With_Mislabels.ipynb
+++ b/notebooks/models_stress_testing/Folktables_GA_With_Mislabels.ipynb
@@ -126,7 +126,7 @@
     "from virny.datasets.data_loaders import CreditDataset\n",
     "\n",
     "from configs.constants import NUM_METRICS_COMPUTATION_RUNS, EXPERIMENT_SEEDS, TEST_SET_FRACTION\n",
-    "from source.user_interfaces.experiment_interface import run_exp_iteration_with_db_writer\n",
+    "from source.user_interfaces.experiment_interface import run_exp_iter_with_models_stress_testing\n",
     "from source.error_injectors.random_nulls_injector import RandomNullsInjector\n",
     "from source.utils.custom_initializers import create_experiment_data_loader\n",
     "from source.preprocessing.basic_preprocessing import get_null_imputer_preprocessor"
@@ -251,6 +251,8 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "    'session_uuid': str(uuid.uuid4()),\n",
+    "    'error_type': 'Mislabels',\n",
+    "    'error_percentages': '0%,5%,10%,20%,30%,40%,50%',\n",
     "    'preprocessing_technique': None,\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
@@ -582,17 +584,19 @@
     }
    ],
    "source": [
-    "multiple_run_metrics_dct = run_exp_iteration_with_db_writer(data_loader=exp_iter_data_loader,\n",
-    "                                                            experiment_seed=experiment_seed,\n",
-    "                                                            test_set_fraction=TEST_SET_FRACTION,\n",
-    "                                                            db_writer_func=db_writer_func,\n",
-    "                                                            preprocessor=preprocessor,\n",
-    "                                                            models_params_for_tuning=models_params_for_tuning,\n",
-    "                                                            metrics_computation_config=metrics_computation_config,\n",
-    "                                                            custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                                                            with_tuning=True,\n",
-    "                                                            save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                            tuned_params_df_path=None)"
+    "multiple_run_metrics_dct = run_exp_iter_with_models_stress_testing(data_loader=exp_iter_data_loader,\n",
+    "                                                                   experiment_seed=experiment_seed,\n",
+    "                                                                   test_set_fraction=TEST_SET_FRACTION,\n",
+    "                                                                   error_injector=error_injector,\n",
+    "                                                                   injector_config_lst=[],\n",
+    "                                                                   db_writer_func=db_writer_func,\n",
+    "                                                                   preprocessor=preprocessor,\n",
+    "                                                                   models_params_for_tuning=models_params_for_tuning,\n",
+    "                                                                   metrics_computation_config=metrics_computation_config,\n",
+    "                                                                   custom_table_fields_dct=custom_table_fields_dct,\n",
+    "                                                                   with_tuning=True,\n",
+    "                                                                   save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
+    "                                                                   tuned_params_df_path=None)"
    ]
   },
   {
