--- a/notebooks/models_stress_testing/Folktables_GA_With_Random_Nulls.ipynb
+++ b/notebooks/models_stress_testing/Folktables_GA_With_Random_Nulls.ipynb
@@ -51,24 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "248cbed8",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:07:33.878508Z",
-     "end_time": "2023-04-23T01:07:33.932543Z"
+     "start_time": "2023-04-23T13:30:19.866407Z",
+     "end_time": "2023-04-23T13:30:20.281401Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -77,12 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "7ec6cd08",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:07:34.303034Z",
-     "end_time": "2023-04-23T01:07:34.341366Z"
+     "start_time": "2023-04-23T13:30:20.282567Z",
+     "end_time": "2023-04-23T13:30:20.290644Z"
     }
    },
    "outputs": [],
@@ -111,12 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "7a9241de",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:07:39.438713Z",
-     "end_time": "2023-04-23T01:07:39.467719Z"
+     "start_time": "2023-04-23T13:30:20.293249Z",
+     "end_time": "2023-04-23T13:30:21.590617Z"
     }
    },
    "outputs": [],
@@ -152,12 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "95768787",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:07:42.359485Z",
-     "end_time": "2023-04-23T01:07:42.407123Z"
+     "start_time": "2023-04-23T13:30:21.571542Z",
+     "end_time": "2023-04-23T13:30:21.603942Z"
     }
    },
    "outputs": [],
@@ -172,38 +163,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "e2eea22a",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:07:45.181976Z",
-     "end_time": "2023-04-23T01:07:47.437065Z"
+     "start_time": "2023-04-23T13:30:21.600868Z",
+     "end_time": "2023-04-23T13:30:24.191398Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "  MAR MIL ESP MIG DREM NATIVITY DIS DEAR DEYE SEX RAC1P RELP CIT ANC SCHL  \\\n0   1   4   0   1    2        1   2    2    2   2     1    1   1   1   21   \n1   5   4   0   3    2        2   2    2    2   2     1   12   5   2   21   \n2   2   4   0   1    2        1   1    2    1   2     1   16   1   1   19   \n3   1   4   0   1    2        1   2    2    2   2     2    0   1   1   16   \n4   1   2   0   1    1        1   1    1    2   1     1    0   1   1   21   \n\n   AGEP  \n0    31  \n1    22  \n2    88  \n3    71  \n4    44  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>MAR</th>\n      <th>MIL</th>\n      <th>ESP</th>\n      <th>MIG</th>\n      <th>DREM</th>\n      <th>NATIVITY</th>\n      <th>DIS</th>\n      <th>DEAR</th>\n      <th>DEYE</th>\n      <th>SEX</th>\n      <th>RAC1P</th>\n      <th>RELP</th>\n      <th>CIT</th>\n      <th>ANC</th>\n      <th>SCHL</th>\n      <th>AGEP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>21</td>\n      <td>31</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>12</td>\n      <td>5</td>\n      <td>2</td>\n      <td>21</td>\n      <td>22</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>19</td>\n      <td>88</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>16</td>\n      <td>71</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>21</td>\n      <td>44</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "  MAR MIL ESP MIG DREM NATIVITY DIS DEAR DEYE SEX RAC1P RELP CIT ANC SCHL  \\\n0   5   4   0   3    2        1   2    2    2   1     2   16   1   1   13   \n1   3   4   0   1    2        1   1    2    1   2     1   16   1   4   16   \n2   5   4   0   1    1        1   1    2    2   2     2   17   1   4   20   \n3   1   4   0   1    2        1   2    2    2   1     2   16   1   1   17   \n4   5   4   0   1    2        1   2    2    2   2     1   16   1   1   19   \n\n   AGEP  \n0    51  \n1    56  \n2    23  \n3    43  \n4    20  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>MAR</th>\n      <th>MIL</th>\n      <th>ESP</th>\n      <th>MIG</th>\n      <th>DREM</th>\n      <th>NATIVITY</th>\n      <th>DIS</th>\n      <th>DEAR</th>\n      <th>DEYE</th>\n      <th>SEX</th>\n      <th>RAC1P</th>\n      <th>RELP</th>\n      <th>CIT</th>\n      <th>ANC</th>\n      <th>SCHL</th>\n      <th>AGEP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>13</td>\n      <td>51</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>16</td>\n      <td>1</td>\n      <td>4</td>\n      <td>16</td>\n      <td>56</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>17</td>\n      <td>1</td>\n      <td>4</td>\n      <td>20</td>\n      <td>23</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>17</td>\n      <td>43</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>19</td>\n      <td>20</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_loader = ACSEmploymentDataset(state=['GA'], year=2018, with_nulls=False, subsample_size=50_000, subsample_seed=42)\n",
+    "# data_loader = ACSEmploymentDataset(state=['GA'], year=2018, with_nulls=False, subsample_size=50_000, subsample_seed=42)\n",
+    "data_loader = ACSEmploymentDataset(state=['GA'], year=2018, with_nulls=False)\n",
     "data_loader.X_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "b4745bc8",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:07:50.898826Z",
-     "end_time": "2023-04-23T01:07:51.014606Z"
+     "start_time": "2023-04-23T13:30:24.183137Z",
+     "end_time": "2023-04-23T13:30:24.341989Z"
     }
    },
    "outputs": [
@@ -211,7 +203,7 @@
      "data": {
       "text/plain": "MAR         0\nMIL         0\nESP         0\nMIG         0\nDREM        0\nNATIVITY    0\nDIS         0\nDEAR        0\nDEYE        0\nSEX         0\nRAC1P       0\nRELP        0\nCIT         0\nANC         0\nSCHL        0\nAGEP        0\ndtype: int64"
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,12 +222,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "1ed6ef1f",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:08:03.582100Z",
-     "end_time": "2023-04-23T01:08:03.780500Z"
+     "start_time": "2023-04-23T13:30:24.304924Z",
+     "end_time": "2023-04-23T13:30:24.367148Z"
     }
    },
    "outputs": [],
@@ -247,12 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "b9d110e2",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:08:04.149765Z",
-     "end_time": "2023-04-23T01:08:04.186976Z"
+     "start_time": "2023-04-23T13:30:24.351860Z",
+     "end_time": "2023-04-23T13:30:24.426028Z"
     }
    },
    "outputs": [],
@@ -266,12 +258,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "bd3d755b",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:08:07.561592Z",
-     "end_time": "2023-04-23T01:08:07.609403Z"
+     "start_time": "2023-04-23T13:30:24.396152Z",
+     "end_time": "2023-04-23T13:30:24.444377Z"
     }
    },
    "outputs": [
@@ -301,12 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "e66a4013",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:08:12.183152Z",
-     "end_time": "2023-04-23T01:08:12.247268Z"
+     "start_time": "2023-04-23T13:30:24.410029Z",
+     "end_time": "2023-04-23T13:30:24.445854Z"
     }
    },
    "outputs": [],
@@ -330,12 +322,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "62dfa85c",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:08:14.424101Z",
-     "end_time": "2023-04-23T01:08:14.472661Z"
+     "start_time": "2023-04-23T13:30:24.436377Z",
+     "end_time": "2023-04-23T13:30:24.514656Z"
     }
    },
    "outputs": [],
@@ -353,12 +345,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "41fe64fe",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-23T01:08:15.871300Z",
-     "end_time": "2023-04-23T01:08:15.894516Z"
+     "start_time": "2023-04-23T13:30:24.484014Z",
+     "end_time": "2023-04-23T13:30:24.532457Z"
     }
    },
    "outputs": [],
@@ -439,12 +431,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "id": "7beab8da",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-04-22T17:06:12.340797Z",
-     "start_time": "2023-04-22T17:06:12.280419Z"
+     "start_time": "2023-04-23T13:36:02.820440Z",
+     "end_time": "2023-04-23T13:36:02.906869Z"
     }
    },
    "outputs": [],
@@ -458,8 +450,144 @@
     "models_params_for_tuning = get_models_params_for_tuning(experiment_seed)\n",
     "# Create a transformed data loader\n",
     "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
-    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+    "exp_iter_data_loader.columns_with_nulls = COLUMNS_TO_TRANSFORM\n",
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader, categorical_trimmed=0.1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-23T13:36:03.371202Z",
+     "end_time": "2023-04-23T13:36:03.374477Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "from source.preprocessing.basic_preprocessing import preprocess_experiment_dataset\n",
+    "\n",
+    "base_flow_dataset, train_test_sets, fitted_column_transformer = \\\n",
+    "    preprocess_experiment_dataset(data_loader, preprocessor,\n",
+    "                                  test_set_fraction=TEST_SET_FRACTION, dataset_split_seed=experiment_seed)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-23T13:36:03.737144Z",
+     "end_time": "2023-04-23T13:36:04.741049Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "original_X_train_val, original_X_test, original_y_train_val, original_y_test = train_test_sets\n",
+    "X_test = original_X_test.copy(deep=True)\n",
+    "error_injector.set_percentage_var(0.4)\n",
+    "transformed_X_test = error_injector.transform(X_test)  # Use only transform without fit\n",
+    "new_X_test_features = fitted_column_transformer.transform(transformed_X_test)  # Preprocess the feature set"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-23T13:36:07.631702Z",
+     "end_time": "2023-04-23T13:36:07.700400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8009, 93)\n",
+      "(8009, 16)\n",
+      "(8009, 93)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(base_flow_dataset.X_test.shape)\n",
+    "print(original_X_test.shape)\n",
+    "print(new_X_test_features.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-23T13:36:41.241909Z",
+     "end_time": "2023-04-23T13:36:41.307390Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "MAR         399\nMIL         383\nESP         388\nMIG           0\nDREM        404\nNATIVITY      0\nDIS         428\nDEAR        415\nDEYE        380\nSEX           0\nRAC1P         0\nRELP          0\nCIT           0\nANC           0\nSCHL        406\nAGEP          0\ndtype: int64"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformed_X_test.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-23T13:36:27.234614Z",
+     "end_time": "2023-04-23T13:36:27.283594Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "cat__MAR_1     0\ncat__MAR_2     0\ncat__MAR_3     0\ncat__MAR_4     0\ncat__MAR_5     0\n              ..\ncat__SCHL_6    0\ncat__SCHL_7    0\ncat__SCHL_8    0\ncat__SCHL_9    0\nnum__AGEP      0\nLength: 93, dtype: int64"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_X_test_features.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-23T13:30:32.804513Z",
+     "end_time": "2023-04-23T13:30:32.857860Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
