--- a/notebooks/models_stress_testing/Folktables_GA_With_Random_Nulls.ipynb
+++ b/notebooks/models_stress_testing/Folktables_GA_With_Random_Nulls.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 120,
    "id": "7a9241de",
    "metadata": {
     "ExecuteTime": {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "id": "95768787",
    "metadata": {
     "ExecuteTime": {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "id": "e2eea22a",
    "metadata": {
     "ExecuteTime": {
@@ -188,7 +188,7 @@
       "text/plain": "  MAR MIL ESP MIG DREM NATIVITY DIS DEAR DEYE SEX RAC1P RELP CIT ANC SCHL  \\\n0   1   4   0   1    2        1   2    2    2   2     1    1   1   1   21   \n1   5   4   0   3    2        2   2    2    2   2     1   12   5   2   21   \n2   2   4   0   1    2        1   1    2    1   2     1   16   1   1   19   \n3   1   4   0   1    2        1   2    2    2   2     2    0   1   1   16   \n4   1   2   0   1    1        1   1    1    2   1     1    0   1   1   21   \n\n   AGEP  \n0    31  \n1    22  \n2    88  \n3    71  \n4    44  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>MAR</th>\n      <th>MIL</th>\n      <th>ESP</th>\n      <th>MIG</th>\n      <th>DREM</th>\n      <th>NATIVITY</th>\n      <th>DIS</th>\n      <th>DEAR</th>\n      <th>DEYE</th>\n      <th>SEX</th>\n      <th>RAC1P</th>\n      <th>RELP</th>\n      <th>CIT</th>\n      <th>ANC</th>\n      <th>SCHL</th>\n      <th>AGEP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>21</td>\n      <td>31</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5</td>\n      <td>4</td>\n      <td>0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>12</td>\n      <td>5</td>\n      <td>2</td>\n      <td>21</td>\n      <td>22</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>16</td>\n      <td>1</td>\n      <td>1</td>\n      <td>19</td>\n      <td>88</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>16</td>\n      <td>71</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>21</td>\n      <td>44</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 110,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 123,
    "id": "b4745bc8",
    "metadata": {
     "ExecuteTime": {
@@ -214,7 +214,7 @@
      "data": {
       "text/plain": "MAR         0\nMIL         0\nESP         0\nMIG         0\nDREM        0\nNATIVITY    0\nDIS         0\nDEAR        0\nDEYE        0\nSEX         0\nRAC1P       0\nRELP        0\nCIT         0\nANC         0\nSCHL        0\nAGEP        0\ndtype: int64"
      },
-     "execution_count": 111,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "id": "1ed6ef1f",
    "metadata": {
     "ExecuteTime": {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 125,
    "id": "b9d110e2",
    "metadata": {
     "ExecuteTime": {
@@ -264,14 +264,14 @@
     "    'error_type': 'Random Nulls',\n",
     "    # 'error_percentages': '0%,5%,10%,20%,30%,40%,50%',\n",
     "    'error_percentages': '0%,10%,20%,40%,60%,80%,100%',\n",
-    "    # 'preprocessing_technique': 'cat: mode_trimmed_0.3, num: median',\n",
-    "    'preprocessing_technique': 'cat: mode, num: median',\n",
+    "    'preprocessing_technique': 'cat: mode_trimmed_0.3, num: median',\n",
+    "    # 'preprocessing_technique': 'cat: mode, num: median',\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "id": "bd3d755b",
    "metadata": {
     "ExecuteTime": {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 127,
    "id": "e66a4013",
    "metadata": {
     "ExecuteTime": {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 128,
    "id": "62dfa85c",
    "metadata": {
     "ExecuteTime": {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 129,
    "id": "41fe64fe",
    "metadata": {
     "ExecuteTime": {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 130,
    "id": "7beab8da",
    "metadata": {
     "ExecuteTime": {
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 131,
    "outputs": [],
    "source": [
     "# Configs for an experiment iteration\n",
@@ -846,8 +846,8 @@
     "# Create a transformed data loader\n",
     "exp_iter_data_loader = create_experiment_data_loader(data_loader)\n",
     "exp_iter_data_loader.columns_with_nulls = COLUMNS_TO_TRANSFORM\n",
-    "# preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader, categorical_trimmed=0.3)\n",
-    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
+    "preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader, categorical_trimmed=0.3)\n",
+    "# preprocessor = get_null_imputer_preprocessor(exp_iter_data_loader)"
    ],
    "metadata": {
     "collapsed": false
@@ -855,15 +855,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "b4f966c9",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2023-04-23T01:08:21.665188Z",
      "end_time": "2023-04-23T01:13:11.201499Z"
-    },
-    "pycharm": {
-     "is_executing": true
     }
    },
    "outputs": [
@@ -871,7 +868,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-23 23:10:03 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
+      "2023-04-23 23:17:11 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n"
      ]
     },
     {
@@ -884,17 +881,31 @@
       " 'experiment_iteration': 'Exp_iter_2',\n",
       " 'injector_config_lst': '[0.1, 0.2, 0.4, 0.6, 0.8, 1.0]',\n",
       " 'model_init_seed': 200,\n",
-      " 'preprocessing_technique': 'cat: mode, num: median',\n",
+      " 'preprocessing_technique': 'cat: mode_trimmed_0.3, num: median',\n",
       " 'session_uuid': 'a4febf95-81bf-4aee-9b51-a690d596d5d2'}\n",
       "\n",
-      "\n"
+      "\n",
+      "[CV 2/3; 1/4] START criterion=gini, max_depth=20, max_features=sqrt, min_samples_split=0.1\n",
+      "[CV 2/3; 1/4] END criterion=gini, max_depth=20, max_features=sqrt, min_samples_split=0.1; Accuracy_Score: (test=0.747) F1_Score: (test=0.727) total time=   0.1s\n",
+      "[CV 1/3; 4/4] START criterion=entropy, max_depth=30, max_features=sqrt, min_samples_split=0.1\n",
+      "[CV 1/3; 4/4] END criterion=entropy, max_depth=30, max_features=sqrt, min_samples_split=0.1; Accuracy_Score: (test=0.745) F1_Score: (test=0.729) total time=   0.1s\n",
+      "[CV 3/3; 4/4] START criterion=entropy, max_depth=30, max_features=sqrt, min_samples_split=0.1\n",
+      "[CV 3/3; 4/4] END criterion=entropy, max_depth=30, max_features=sqrt, min_samples_split=0.1; Accuracy_Score: (test=0.745) F1_Score: (test=0.729) total time=   0.1s\n",
+      "[CV 1/3; 2/8] START C=0.0001, max_iter=250, penalty=l2, solver=lbfgs............\n",
+      "[CV 1/3; 2/8] END C=0.0001, max_iter=250, penalty=l2, solver=lbfgs; Accuracy_Score: (test=0.714) F1_Score: (test=0.679) total time=   0.4s\n",
+      "[CV 1/3; 4/8] START C=0.1, max_iter=250, penalty=l2, solver=lbfgs...............\n",
+      "[CV 1/3; 4/8] END C=0.1, max_iter=250, penalty=l2, solver=lbfgs; Accuracy_Score: (test=0.768) F1_Score: (test=0.760) total time=   5.8s\n",
+      "[CV 3/3; 6/8] START C=1, max_iter=250, penalty=l2, solver=lbfgs.................\n",
+      "[CV 3/3; 6/8] END C=1, max_iter=250, penalty=l2, solver=lbfgs; Accuracy_Score: (test=0.758) F1_Score: (test=0.750) total time=   5.7s\n",
+      "[CV 3/3; 7/8] START C=100, max_iter=250, penalty=l2, solver=newton-cg...........\n",
+      "[CV 3/3; 7/8] END C=100, max_iter=250, penalty=l2, solver=newton-cg; Accuracy_Score: (test=0.758) F1_Score: (test=0.750) total time=  25.0s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-23 23:10:05 experiment_interface.py INFO    : The dataset is preprocessed\n"
+      "2023-04-23 23:17:13 experiment_interface.py INFO    : The dataset is preprocessed\n"
      ]
     },
     {
@@ -943,6 +954,12 @@
       "SCHL        138\n",
       "AGEP          0\n",
       "dtype: int64\n",
+      "[CV 2/3; 3/4] START criterion=entropy, max_depth=20, max_features=sqrt, min_samples_split=0.1\n",
+      "[CV 2/3; 3/4] END criterion=entropy, max_depth=20, max_features=sqrt, min_samples_split=0.1; Accuracy_Score: (test=0.755) F1_Score: (test=0.737) total time=   0.1s\n",
+      "[CV 2/3; 3/8] START C=0.1, max_iter=250, penalty=l2, solver=newton-cg...........\n",
+      "[CV 2/3; 3/8] END C=0.1, max_iter=250, penalty=l2, solver=newton-cg; Accuracy_Score: (test=0.776) F1_Score: (test=0.768) total time=   6.4s\n",
+      "[CV 1/3; 7/8] START C=100, max_iter=250, penalty=l2, solver=newton-cg...........\n",
+      "[CV 1/3; 7/8] END C=100, max_iter=250, penalty=l2, solver=newton-cg; Accuracy_Score: (test=0.769) F1_Score: (test=0.761) total time=  36.4s\n",
       "transformed_X_test.isnull().sum() --  MAR         528\n",
       "MIL         522\n",
       "ESP         526\n",
@@ -993,8 +1010,130 @@
       "ANC         1864\n",
       "SCHL        1823\n",
       "AGEP           0\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "transformed_X_test.isnull().sum() --  MAR         2689\n",
+      "MIL         2649\n",
+      "ESP         2736\n",
+      "MIG         2713\n",
+      "DREM        2729\n",
+      "NATIVITY    2706\n",
+      "DIS         2654\n",
+      "DEAR        2697\n",
+      "DEYE        2731\n",
+      "SEX            0\n",
+      "RAC1P          0\n",
+      "RELP        2705\n",
+      "CIT         2689\n",
+      "ANC         2694\n",
+      "SCHL        2673\n",
+      "AGEP           0\n",
+      "dtype: int64\n",
+      "2023/04/23, 23:18:37: Tuning DecisionTreeClassifier...\n",
+      "Fitting 3 folds for each of 4 candidates, totalling 12 fits\n",
+      "2023/04/23, 23:18:38: Tuning for DecisionTreeClassifier is finished [F1 score = 0.7314692777466018, Accuracy = 0.7483333333333334]\n",
+      "\n",
+      "2023/04/23, 23:18:38: Tuning LogisticRegression...\n",
+      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-23 23:19:23 experiment_interface.py INFO    : Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023/04/23, 23:19:23: Tuning for LogisticRegression is finished [F1 score = 0.7601191992518244, Accuracy = 0.7677333333333335]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Multiple runs progress:   0%|          | 0/2 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "7efc6c3141194490a9ed870797e29f4d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Analyze models in one run:   0%|          | 0/2 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c02a736c3e0a4b52a3adc095fe05f3a7"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b6dc0479c18146bfa858c06ce036b5e2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "4b41d3e71d884cf6a9a3cc004047d2d2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Analyze models in one run:   0%|          | 0/2 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b75d825ba27d4fdb82b2854ce1eae44b"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b2926f806bfe43a5bfd05be09dbef680"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ca7de5e9499f4f51a4eb11c8e64a0476"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
