--- a/notebooks/models_stress_testing/Folktables_Income_GA_With_Random_Nulls.ipynb
+++ b/notebooks/models_stress_testing/Folktables_Income_GA_With_Random_Nulls.ipynb
@@ -164,7 +164,7 @@
    "source": [
     "ROOT_DIR = os.path.join(os.getcwd(), \"..\", \"..\")\n",
     "EXPERIMENT_NAME = 'stress_testing_nulls'\n",
-    "DB_COLLECTION_NAME = f'{EXPERIMENT_NAME}_results'\n",
+    "DB_COLLECTION_NAME = f'exp_{EXPERIMENT_NAME}'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "COLUMNS_TO_TRANSFORM = ['SCHL', 'COW', 'MAR', 'OCCP', 'POBP', 'RELP', 'WKHP']\n",
     "INJECTOR_CONFIG_LST = [0.05, 0.1, 0.2, 0.3, 0.4, 0.5]\n",
