--- a/notebooks/models_stress_testing/visualizations/Compas_Vis_Random_Nulls.ipynb
+++ b/notebooks/models_stress_testing/visualizations/Compas_Vis_Random_Nulls.ipynb
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "EXPERIMENT_NAME = 'stress_testing_nulls'\n",
-    "DB_COLLECTION_NAME = f'{EXPERIMENT_NAME}_results'\n",
+    "DB_COLLECTION_NAME = f'exp_{EXPERIMENT_NAME}'\n",
     "DATASET_NAME = 'COMPAS'\n",
     "EXPERIMENT_SESSION_UUID = '630e5d1d-1f34-4696-a678-5b113ba16bbf'\n",
     "SENSITIVE_ATTRS = ['sex', 'race', 'sex&race']\n",
