--- a/notebooks/models_stress_testing/visualizations/Folktables_Income_Vis_Random_Nulls.ipynb
+++ b/notebooks/models_stress_testing/visualizations/Folktables_Income_Vis_Random_Nulls.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "EXPERIMENT_NAME = 'stress_testing_nulls'\n",
-    "DB_COLLECTION_NAME = f'{EXPERIMENT_NAME}_results'\n",
+    "DB_COLLECTION_NAME = f'exp_{EXPERIMENT_NAME}'\n",
     "DATASET_NAME = 'Folktables_Income_GA_2018'\n",
     "EXPERIMENT_SESSION_UUID = '42191a73-175c-465e-839c-635d9f83d9e5'\n",
     "SENSITIVE_ATTRS = ['SEX', 'RAC1P', 'AGEP', 'SEX&RAC1P&AGEP']\n",
