--- a/notebooks/models_stress_testing/COMPAS_With_Outliers.ipynb
+++ b/notebooks/models_stress_testing/COMPAS_With_Outliers.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "ROOT_DIR = os.path.join(os.getcwd(), \"..\", \"..\")\n",
     "EXPERIMENT_NAME = 'stress_testing_outliers'\n",
-    "DB_COLLECTION_NAME = f'{EXPERIMENT_NAME}_results'\n",
+    "DB_COLLECTION_NAME = f'exp_{EXPERIMENT_NAME}'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "COLUMNS_TO_TRANSFORM = ['juv_fel_count', 'juv_misd_count', 'juv_other_count', 'priors_count']\n",
     "# INJECTOR_CONFIG_LST = [0.05, 0.1, 0.2, 0.3, 0.4, 0.5]\n",
