--- a/notebooks/models_stress_testing/COMPAS_With_Random_Nulls.ipynb
+++ b/notebooks/models_stress_testing/COMPAS_With_Random_Nulls.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "ROOT_DIR = os.path.join(os.getcwd(), \"..\", \"..\")\n",
     "EXPERIMENT_NAME = 'stress_testing_nulls'\n",
-    "DB_COLLECTION_NAME = f'{EXPERIMENT_NAME}_results'\n",
+    "DB_COLLECTION_NAME = f'exp_{EXPERIMENT_NAME}'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "COLUMNS_TO_TRANSFORM = ['juv_fel_count', 'juv_misd_count', 'juv_other_count', 'priors_count', 'c_charge_degree_F', 'c_charge_degree_M']\n",
     "MAX_NUM_COLUMNS_TO_EFFECT = 3\n",
