Exp iter 1 for COMPAS

--- a/notebooks/models_stress_testing/Folktables_Income_GA_With_Random_Nulls.ipynb
+++ b/notebooks/models_stress_testing/Folktables_Income_GA_With_Random_Nulls.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "fb7d0702",
+   "id": "3d4f2ce2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T17:06:09.249675Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c27cdb73",
+   "id": "e36448df",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T17:06:09.276223Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a7eb3010",
+   "id": "b3a040bb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T17:06:09.293739Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "19ef2746",
+   "id": "07551008",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:20.281401Z",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "26834442",
+   "id": "7d4e7f9d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:20.290644Z",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "67135826",
+   "id": "c624ed3b",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ff7119",
+   "id": "9bf06976",
    "metadata": {},
    "source": [
     "# Folktables GA Dataset With Random Nulls"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e7a3d6f",
+   "id": "c85a794d",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "da78401e",
+   "id": "809075c7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:21.590617Z",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d228cb0c",
+   "id": "fe008a46",
    "metadata": {},
    "source": [
     "## Initialize input variables for the experiment"
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b78a1d5e",
+   "id": "85e5b7e0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:21.603942Z",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b00ab702",
+   "id": "991bd315",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:24.191398Z",
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cf5d20ac",
+   "id": "49267d1a",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6b00adc5",
+   "id": "ccf9c01c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:24.341989Z",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca292559",
+   "id": "02c4a145",
    "metadata": {},
    "source": [
     "### Define a db writer and custom fields to insert into your database"
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7503dead",
+   "id": "3c11d195",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:24.367148Z",
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c5378ce4",
+   "id": "3b078339",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:24.426028Z",
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c50751c7",
+   "id": "b221637b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:24.444377Z",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c382775e",
+   "id": "c35bd710",
    "metadata": {},
    "source": [
     "### Create a metrics computation config object"
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dc2729a9",
+   "id": "2b2ca61e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:24.445854Z",
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6d054121",
+   "id": "e84a6ac3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:24.514656Z",
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fb46b0b",
+   "id": "b6ba05ef",
    "metadata": {},
    "source": [
     "### Define tuning parameter for models"
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c8481c31",
+   "id": "b81ef642",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:30:24.532457Z",
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60272c24",
+   "id": "e5295dfd",
    "metadata": {},
    "source": [
     "## Run experiments"
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9c7d653",
+   "id": "f6551e4e",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "170aca59",
+   "id": "9e2f5bad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T13:36:02.906869Z",
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5323304d",
+   "id": "46447bf9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T17:12:08.249600Z",
@@ -760,8 +760,101 @@
       "2023/04/25, 15:57:13: Tuning for LogisticRegression is finished [F1 score = 0.796014434955505, Accuracy = 0.8161822466614298]\n",
       "\n",
       "2023/04/25, 15:57:13: Tuning RandomForestClassifier...\n",
-      "Fitting 3 folds for each of 144 candidates, totalling 432 fits\n"
+      "Fitting 3 folds for each of 144 candidates, totalling 432 fits\n",
+      "2023/04/25, 16:11:37: Tuning for RandomForestClassifier is finished [F1 score = 0.7793547799608405, Accuracy = 0.8017805708300602]\n",
+      "\n",
+      "2023/04/25, 16:11:38: Tuning XGBClassifier...\n",
+      "Fitting 3 folds for each of 48 candidates, totalling 144 fits\n",
+      "2023/04/25, 16:49:42: Tuning for XGBClassifier is finished [F1 score = 0.8070083735074647, Accuracy = 0.8256087981146897]\n",
+      "\n",
+      "2023/04/25, 16:49:42: Tuning KNeighborsClassifier...\n",
+      "Fitting 3 folds for each of 42 candidates, totalling 126 fits\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-25 16:59:09 experiment_interface.py INFO    : Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023/04/25, 16:59:09: Tuning for KNeighborsClassifier is finished [F1 score = 0.777201067027204, Accuracy = 0.7973946059177796]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "122d288e88f94ecebb295f4c8be69060",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Multiple runs progress:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79ede9c676904261b7dbaa7865bef6d1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5bbfb0f82cc04f7c99bc34fa5669daf7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c638f5e09b6f45b9afdd78a5c36e6c98",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a09f1e7e45a04df1823f80332d500cac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -785,7 +878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "969e5fce",
+   "id": "8dc6691c",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -794,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "4d8253f8",
+   "id": "9439b756",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "24d00672",
+   "id": "bfefb4b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-23T01:13:11.201499Z",
@@ -1133,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f96587a0",
+   "id": "dd79fdf5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T17:12:09.025575Z",
@@ -1148,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "46c8b94e",
+   "id": "0fff1ea6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-22T17:12:09.025679Z",
